crates/alder-can/src/snapshots/alder_can__module__tests__dependency_ordering.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nb = a\n\na = 1\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 2,
                    },
                },
                value: "a",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 5,
                    },
                    end: Position {
                        line: 5,
                        column: 6,
                    },
                },
                value: Int(
                    1,
                ),
            },
        },
        next: Declare {
            definition: Def {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 1,
                        },
                        end: Position {
                            line: 3,
                            column: 2,
                        },
                    },
                    value: "b",
                },
                args: [],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 5,
                        },
                        end: Position {
                            line: 3,
                            column: 6,
                        },
                    },
                    value: VarTopLevel(
                        QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "a",
                        },
                    ),
                },
            },
            next: Empty,
        },
    },
    unions: [],
    aliases: [],
    binops: [],
}
