crates/alder-can/src/snapshots/alder_can__module__tests__duplicate_binop.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ninfix left 6 (|>) = apR\n\ninfix left 6 (|>) = apR2\n\napR x f = f x\n\napR2 x f = f x\n"
---
[
    DuplicateBinop {
        name: "|>",
        first: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 5,
                column: 1,
            },
        },
        second: Region {
            start: Position {
                line: 5,
                column: 1,
            },
            end: Position {
                line: 7,
                column: 1,
            },
        },
    },
]
