crates/alder-can/src/snapshots/alder_can__module__tests__duplicate_let_bindings.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        x = 1\n        x = 2\n    in\n    x\n"
---
[
    DuplicatePattern {
        context: LetBinding,
        name: "x",
        first: Region {
            start: Position {
                line: 5,
                column: 9,
            },
            end: Position {
                line: 5,
                column: 10,
            },
        },
        second: Region {
            start: Position {
                line: 6,
                column: 9,
            },
            end: Position {
                line: 6,
                column: 10,
            },
        },
    },
]
