crates/alder-can/src/snapshots/alder_can__module__tests__duplicate_pattern_destruct.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        (x, x) = (1, 2)\n    in\n    x\n"
---
[
    DuplicatePattern {
        context: LetBinding,
        name: "x",
        first: Region {
            start: Position {
                line: 5,
                column: 10,
            },
            end: Position {
                line: 5,
                column: 11,
            },
        },
        second: Region {
            start: Position {
                line: 5,
                column: 13,
            },
            end: Position {
                line: 5,
                column: 14,
            },
        },
    },
]
